[project]
name = "agents-with-crewai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "afzalfaizi", email = "afzaalm993@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.61.1",
]

[project.scripts]
faizi = "agents_with_crewai.hello:call_gemini"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
